--- a/hw.html
+++ b/hw.html
@@ -3,8 +3,7 @@
     <head>
         <title>My page</title>
     </head>
-    <body>
-        <h2>JavaScript String Methods and Loops</h2>
+    <body></body>
         <p id="result"></p>
         <script>
             var date = "";
